Remove example environment variables, update API URLs in frontend files, and adjust Vercel rewrites for production deployment.

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -23,7 +23,7 @@
     </table>
     <button id="reload-button" class="mt-4 bg-yellow-400 text-[#002b6c] py-2 px-4 rounded">Reload</button>
     <script>
-      const API_BASE_URL = "https://birthday-api.up.railway.app";
+      const API_BASE_URL = "https://birthday-webapp-production.up.railway.app";
 
       async function fetchRSVPs() {
         const tableBody = document.querySelector('#rsvp-table tbody');
