--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/alpinejs" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen flex items-center justify-center px-4 py-10 bg-black/70 bg-blend-darken">
-  <div class="w-full max-w-md bg-[#002b6c]/90 backdrop-blur-xl rounded-2xl shadow-xl p-8 space-y-6 text-white">
+<body class="min-h-screen flex items-center justify-center px-4 py-10 relative" style="background-image: url('/static/img/bombonera.jpg'); background-size: cover; background-position: center;">
+  <div class="absolute inset-0 bg-black/70 z-0"></div>
+  <div class="w-full max-w-md rounded-2xl shadow-xl p-8 space-y-6 text-white relative bg-[#002b6c]/90 backdrop-blur-xl z-10">
     <h1 class="text-4xl font-extrabold text-white text-center">2/8 en Ostende 💙💛💙</h1>
     <p class="text-center text-sm text-white/80">Confirmá asistencia a la cena, la fiesta o ambas</p>
     <form id="rsvp-form" class="space-y-4">
