Update RSVP form and admin panel: simplify admin credentials, enhance date display, and improve user feedback on form submission

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,35 +7,138 @@
   <title>Confirmación de Asistencia</title>
   <script src="https://cdn.jsdelivr.net/npm/alpinejs" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background-color: #0a0a0a;
+      background-image: url('/static/img/bombonera.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+    @media (max-width: 768px) {
+      body {
+        background-attachment: scroll;
+        background-position: top;
+      }
+    }
+    .info-section h3 {
+      padding-bottom: 4px;
+      margin-bottom: 8px;
+    }
+    .info-section .dinner-info > h3,
+    .info-section .party-info > h3 {
+      border-bottom: 2px solid #FFD700;
+    }
+    .info-section p {
+      margin-bottom: 6px;
+    }
+  </style>
 </head>
-<body class="min-h-screen flex items-center justify-center px-4 py-10 relative" style="background-image: url('/static/img/bombonera.jpg'); background-size: cover; background-position: center;">
-  <div class="absolute inset-0 bg-black/70 z-0"></div>
-  <div class="w-full max-w-md rounded-2xl shadow-xl p-8 space-y-6 text-white relative bg-[#002b6c]/90 backdrop-blur-xl z-10">
-    <h1 class="text-4xl font-extrabold text-white text-center">2/8 en Ostende 💙💛💙</h1>
+<body class="min-h-screen flex items-center justify-center px-4 py-10 bg-black/70 bg-blend-darken">
+  <div class="w-full max-w-md bg-[#002b6c]/90 backdrop-blur-xl rounded-2xl shadow-xl p-8 space-y-6 text-white">
+    <h1 class="text-4xl font-extrabold text-white text-center">2/8 💙💛💙</h1>
     <p class="text-center text-sm text-white/80">Confirmá asistencia a la cena, la fiesta o ambas</p>
     <form id="rsvp-form" class="space-y-4">
-      <input type="text" id="name" placeholder="Nombre" class="w-full px-4 py-2 rounded" required />
-      <select id="attendance" class="w-full px-4 py-2 rounded">
-        <option value="dinner">Cena</option>
-        <option value="party">Fiesta</option>
-        <option value="both">Ambas</option>
-      </select>
-      <button type="submit" class="w-full bg-yellow-400 text-[#002b6c] py-2 rounded">Enviar</button>
+      <div class="mb-4">
+        <label for="name" class="block text-sm font-semibold text-white">Nombre (o apodo)</label>
+        <input type="text" id="name" name="name"
+               class="mt-1 w-full rounded-md border border-yellow-400 bg-transparent text-white placeholder-white/70 p-2 focus:outline-none focus:ring-2 focus:ring-yellow-300" placeholder="Ej: Juan Román" required />
+      </div>
+      <div class="mb-4">
+        <label for="attendance" class="block text-sm font-semibold text-white">¿A qué venis?</label>
+        <select id="attendance" name="attendance"
+                class="mt-1 w-full rounded-md border border-yellow-400 bg-transparent text-white p-2 focus:outline-none focus:ring-2 focus:ring-yellow-300">
+          <option value="">Elegí una opción</option>
+          <option value="both">A ambas 🍽️🎉</option>
+          <option value="dinner">Solo a la cena 🍽️</option>
+          <option value="party">Solo a la fiesta 🎉</option>
+          <option value="none">A ninguna 😔</option>
+        </select>
+      </div>
+      <div id="error-message" class="text-red-400 text-sm mb-2" style="display:none;"></div>
+      <button type="submit"
+              class="w-full bg-yellow-400 text-[#002b6c] font-bold py-2 px-4 rounded-md hover:bg-yellow-300 transition-all">
+        Confirmar asistencia
+      </button>
     </form>
+    <!-- Embedded Maps Section -->
+    <div class="space-y-6 mt-8">
+
+    </div>
+    <div id="confirmation-message" style="display: none;" class="mt-6 text-center">
+      <div class="bg-yellow-400/90 text-[#002b6c] border-2 border-white p-5 rounded-xl shadow-xl space-y-2">
+        <p class="text-sm font-medium">¡Gracias por confirmar! Nos vemos el 2/8 💥💙💛</p>
+      </div>
+    </div>
+    <section class="venue-info mt-8 info-section">
+      <h2 class="text-xl font-bold mb-4">Info</h2>
+      <div class="dinner-info mb-6">
+          <h3 class="text-lg font-semibold">Cena en la terraza (techada) de Cadillac</h3>
+          <p class="text-sm">Hora: <strong>21:00</strong></p>
+         <div class="bg-white/10 backdrop-blur-sm rounded-xl shadow-lg p-4 flex flex-col">
+           <h3 class="text-base font-bold mb-2 text-yellow-300 text-left">📍 Cena</h3>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.0266447445297!2d-58.46048952388051!3d-34.55288075481582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb42930b17ac5%3A0x4f926af97bca8f4e!2sVicente%20Cadillach%20Cervecer%C3%ADa!5e0!3m2!1ses!2sar!4v1753711579564!5m2!1ses!2sar"
+            width="100%"
+            height="200"
+            style="border:0; border-radius: 0.75rem; max-width: 400px;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Cena: Cadillac"
+          ></iframe>
+        </div>
+      </div>
+      <div class="party-info">
+          <h3 class="text-lg font-semibold">Pary</h3>
+          <p class="text-sm">Hora: <strong>Alrededor de la 1 post cena</strong></p>
+         <div class="bg-white/10 backdrop-blur-sm rounded-xl shadow-lg p-4 flex flex-col">
+           <h3 class="text-base font-bold mb-2 text-yellow-300 text-left">🎉 Ubicación</h3>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5344.54246142355!2d-58.473201735156564!3d-34.5848331331404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ed60d170b9%3A0x211107b16a646c97!2sDESEO%20CLUB!5e0!3m2!1ses!2sar!4v1753711346432!5m2!1ses!2sar"
+            width="100%"
+            height="200"
+            style="border:0; border-radius: 0.75rem; max-width: 400px;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Fiesta: DESEO CLUB"
+          ></iframe>
+          </div>
+      </div>
+    </section>
+    <section class="party-ticket mt-8">
+      <h3 class="text-sm font-semibold mb-2">Si te sumas, te dejo el link para comprar la entrada:</h3>
+      <a href="https://venti.com.ar/evento/polenta"
+         class="inline-block bg-yellow-400 text-[#002b6c] font-bold py-2 px-5 rounded-full hover:bg-yellow-300 transition-all shadow-lg">
+        🎟️ Polenta Polenta 🎟️
+      </a>
+    </section>
     <script>
       document.getElementById('rsvp-form').addEventListener('submit', async (e) => {
         e.preventDefault();
-        const name = document.getElementById('name').value;
+        const name = document.getElementById('name').value.trim();
         const attendance = document.getElementById('attendance').value;
+        const errorMessage = document.getElementById('error-message');
+        if (!name || !attendance) {
+          errorMessage.textContent = 'Por favor, completá todos los campos.';
+          errorMessage.style.display = 'block';
+          return;
+        } else {
+          errorMessage.style.display = 'none';
+        }
         const response = await fetch('https://birthday-webapp-2025-backend-production.up.railway.app/rsvp', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, dinner_confirmed: attendance === 'dinner' || attendance === 'both', party_confirmed: attendance === 'party' || attendance === 'both' })
         });
         if (response.ok) {
-          alert('RSVP enviado con éxito');
+          document.getElementById('confirmation-message').style.display = 'block';
+          document.getElementById('rsvp-form').reset();
         } else {
-          alert('Error al enviar RSVP');
+          errorMessage.textContent = 'Error al enviar RSVP';
+          errorMessage.style.display = 'block';
         }
       });
     </script>
