--- a/public/admin.html
+++ b/public/admin.html
@@ -53,8 +53,7 @@
         const tableBody = document.querySelector('#rsvp-table tbody');
         tableBody.innerHTML = '<tr><td colspan="4">Cargando...</td></tr>';
 
-        const password = prompt("Ingrese la contraseña de administrador:");
-        const credentials = btoa(`admin:${password}`);
+        const credentials = btoa(`admin:admin`);
 
         try {
           const response = await fetch(`${API_BASE_URL}/admin`, {
@@ -72,9 +71,12 @@
               if (rsvp.party_confirmed) partyTotal++;
               const row = document.createElement('tr');
               row.className = "hover:bg-white/10 transition";
+              const dateObj = new Date(rsvp.timestamp);
+              const day = dateObj.getDate().toString().padStart(2, '0');
+              const month = (dateObj.getMonth() + 1).toString().padStart(2, '0');
               row.innerHTML = `
                 <td class="px-4 py-3">${rsvp.name}</td>
-                <td class="px-4 py-3">${new Date(rsvp.timestamp).toLocaleString()}</td>
+                <td class="px-4 py-3">${day}/${month}</td>
                 <td class="px-4 py-3">${rsvp.dinner_confirmed ? '<span class=\'text-green-400 font-semibold\'>Sí</span>' : '<span class=\'text-red-400 font-semibold\'>No</span>'}</td>
                 <td class="px-4 py-3">${rsvp.party_confirmed ? '<span class=\'text-green-400 font-semibold\'>Sí</span>' : '<span class=\'text-red-400 font-semibold\'>No</span>'}</td>
               `;
@@ -83,7 +85,7 @@
             document.querySelector('#dinner-total span').textContent = dinnerTotal;
             document.querySelector('#party-total span').textContent = partyTotal;
           } else if (response.status === 401) {
-            tableBody.innerHTML = '<tr><td colspan="4">No autorizado: Verifique sus credenciales.</td></tr>';
+            tableBody.innerHTML = '<tr><td colspan="4">No autorizado</td></tr>';
           } else {
             tableBody.innerHTML = '<tr><td colspan="4">Error al cargar los datos.</td></tr>';
           }
