--- a/public/index.html
+++ b/public/index.html
@@ -79,34 +79,8 @@
           </div>
       </div>
     </section>
-    <script>
-      document.getElementById('rsvp-form').addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const name = document.getElementById('name').value.trim();
-        const attendance = document.getElementById('attendance').value;
-        const errorMessage = document.getElementById('error-message');
-        if (!name || !attendance) {
-          errorMessage.textContent = 'Por favor, completá todos los campos.';
-          errorMessage.style.display = 'block';
-          return;
-        } else {
-          errorMessage.style.display = 'none';
-        }
-        const response = await fetch('https://birthday-webapp-2025-backend-production.up.railway.app/rsvp', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name, dinner_confirmed: attendance === 'dinner' || attendance === 'both', party_confirmed: attendance === 'party' || attendance === 'both' })
-        });
-        if (response.ok) {
-          document.getElementById('confirmation-message').style.display = 'block';
-          document.getElementById('rsvp-form').reset();
-        } else {
-          errorMessage.textContent = 'Error al enviar RSVP';
-          errorMessage.style.display = 'block';
-        }
-      });
-    </script>
-        <form id="rsvp-form" class="space-y-4">
+
+    <form id="rsvp-form" class="space-y-4">
       <div class="mb-4">
         <label for="name" class="block text-sm font-semibold text-white">Nombre (o apodo)</label>
         <input type="text" id="name" name="name"
@@ -128,12 +102,46 @@
               class="w-full bg-yellow-400 text-[#002b6c] font-bold py-2 px-4 rounded-md hover:bg-yellow-300 transition-all">
         Confirmar asistencia
       </button>
-    </form>
-    <div id="confirmation-message" style="display: none;" class="mt-6 text-center">
-      <div class="bg-yellow-400/90 text-[#002b6c] border-2 border-white p-5 rounded-xl shadow-xl space-y-2">
-        <p class="text-sm font-medium">¡Gracias por confirmar! Nos vemos el 2/8 💥💙💛</p>
+      <div id="confirmation-message" style="display: none;" class="mt-6 text-center">
+        <div class="bg-yellow-400/90 text-[#002b6c] border-2 border-white p-5 rounded-xl shadow-xl space-y-2">
+          <p class="text-sm font-medium">¡Gracias por confirmar! Nos vemos el 2/8 💥💙💛</p>
+        </div>
       </div>
-    </div>
+    </form>
+    <script>
+      document.getElementById('rsvp-form').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const name = document.getElementById('name').value.trim();
+        const attendance = document.getElementById('attendance').value;
+        const errorMessage = document.getElementById('error-message');
+        const confirmationMessage = document.getElementById('confirmation-message');
+        confirmationMessage.style.display = 'none'; // Hide before submit
+        if (!name || !attendance) {
+          errorMessage.textContent = 'Por favor, completá todos los campos.';
+          errorMessage.style.display = 'block';
+          return;
+        } else {
+          errorMessage.style.display = 'none';
+        }
+        try {
+          const response = await fetch('https://birthday-webapp-2025-backend-production.up.railway.app/rsvp', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ name, dinner_confirmed: attendance === 'dinner' || attendance === 'both', party_confirmed: attendance === 'party' || attendance === 'both' })
+          });
+          if (response.ok) {
+            confirmationMessage.style.display = 'block';
+            document.getElementById('rsvp-form').reset();
+          } else {
+            errorMessage.textContent = 'Error al enviar RSVP';
+            errorMessage.style.display = 'block';
+          }
+        } catch (err) {
+          errorMessage.textContent = 'Error de conexión. Intentá de nuevo.';
+          errorMessage.style.display = 'block';
+        }
+      });
+    </script>
   </div>
 </body>
 </html>
