Update confirmation message in RSVP form for clarity and tone adjustment

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
       </button>
       <div id="confirmation-message" style="display: none;" class="mt-6 text-center">
         <div class="bg-yellow-400/90 text-[#002b6c] border-2 border-white p-5 rounded-xl shadow-xl space-y-2">
-          <p class="text-sm font-medium">¡Gracias por confirmar! Nos vemos el 2/8 💥💙💛</p>
+          <p class="text-sm font-medium">Gracias por confirmar! Nos vemooo</p>
         </div>
       </div>
     </form>
