Update API base URL in admin panel and RSVP form for consistency

--- a/public/admin.html
+++ b/public/admin.html
@@ -47,7 +47,7 @@
     </table>
     <button id="reload-button" class="mt-4 bg-yellow-400 text-[#002b6c] py-2 px-4 rounded">Recargar</button>
     <script>
-      const API_BASE_URL = "https://birthday-webapp-2025-backend-production.up.railway.app";
+      const API_BASE_URL = "https://birthday-webapp-2025-backend.onrender.com";
 
       async function fetchRSVPs() {
         const tableBody = document.querySelector('#rsvp-table tbody');
