--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
           errorMessage.style.display = 'none';
         }
         try {
-          const response = await fetch('https://birthday-webapp-2025-backend-production.up.railway.app/rsvp', {
+          const response = await fetch('https://birthday-webapp-2025-backend.onrender.com/rsvp', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, dinner_confirmed: attendance === 'dinner' || attendance === 'both', party_confirmed: attendance === 'party' || attendance === 'both' })
