--- a/public/admin.html
+++ b/public/admin.html
@@ -47,7 +47,7 @@
     </table>
     <button id="reload-button" class="mt-4 bg-yellow-400 text-[#002b6c] py-2 px-4 rounded">Recargar</button>
     <script>
-      const API_BASE_URL = "https://pelusa-backend.sytes.net";
+      const API_BASE_URL = "https://birthday-app.t948px0xa6b3m.us-east-1.cs.amazonlightsail.com";
 
       async function fetchRSVPs() {
         const tableBody = document.querySelector('#rsvp-table tbody');
